[tool.poetry]
authors = ["Jeff <grandpoctopus@gmail.com>"]
description = "pyspark ETL pipelines to get trending words for popular topics on redit"
name = "topical_terms"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.8.13"
pyspark-pipeline = {git = "https://github.com/grandpoctopus/pyspark_pipeline.git", rev = "main"}
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
black = "22.6.0" # keep synced with .pre-commit-config.yaml
coverage = "^5.2.1"
flake8 = "5.0.4" # keep synced with .pre-commit-config.yaml
isort = "5.11.5" # keep synced with .pre-commit-config.yaml
mypy = "0.782" # keep synced with .pre-commit-config.yaml
pre-commit = "^2.7.1"
pytest = "^6.0.2"
pytest-coverage = "^0.0"
tox = "^3.20.0"

[tool.black]
line-length = 80
target-version = ['py38']

[tool.isort]
# Based on black-compatible configs.
# See here: https://github.com/psf/black/blob/master/docs/compatible_configs.md
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
use_parentheses = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
